Adjusted height of New Clipping dialog (part of issue #166)

--- a/src/pages/new.css
+++ b/src/pages/new.css
@@ -150,7 +150,7 @@ body[data-os="linux"]:not([data-laf="true"]) input[type="checkbox"] + label {
 }
 
 #new-clipping-fldr-tree-popup {
-    bottom: 10px;
+    bottom: 4px;
     left: 16px;
     width: 350px;
     height: 151px;
